--- a/01-html/dictionary_entry/index.html
+++ b/01-html/dictionary_entry/index.html
@@ -7,6 +7,14 @@
     <title>Dictionary Entry</title>
 </head>
 <body>
-    
+   <h1>ninja</h1> 
+   <img src="./pronunciation.png" alt="">
+   <p>
+    <em>noun</em>
+    <ol>
+        <li>A practitioner skilled in the Japanese art of ninjutsu</li>
+        <li>A programmer who breaks down problems with zen-like focus</li>
+    </ol>
+   </p>
 </body>
 </html>
