--- a/02-CSS/Profile_Page/item.html
+++ b/02-CSS/Profile_Page/item.html
@@ -44,7 +44,53 @@
            </div>
         </div>
         <div class="col-2"> 
-
+            <div class="request" >
+                <div class="req-title">
+                    <img id="accept" src="./images/circle2.png" alt="">
+                    <h4>Connection Requests</h4>
+                </div>
+                <div class="req-body" >
+                    <div class="pep-req" >
+                        <img id="pep-pic" src="./images/alayne-s.jpg" alt="">
+                        <p id="pep-name" >Alayne S</p>
+                        <img id="yes" src="./Icons/accept-circle.png" alt="">
+                        <img id="no" src="./Icons/close-circle.png" alt="">
+                    </div>
+                    <div class="pep-req" >
+                        <img id="pep-pic" src="./images/anne-s.jpg" alt="">
+                        <p id="pep-name" >Anne S</p>
+                        <img id="yes" src="./Icons/accept-circle.png" alt="">
+                        <img id="no" src="./Icons/close-circle.png" alt="">
+                    </div>
+                </div>
+            <div class="connect" >
+                <div class="con-title" >
+                    <img id="amount" src="./images/oval.png" alt="">
+                    <h4>Your Connections</h4>
+                </div>
+                 <div class="con-body" >
+                    <div class="pep-list">
+                        <img id="con-pic" src="./images/arry-s.jpg" alt="">
+                        <p id="-name">Arry S</p>
+                    </div>
+                    <div class="pep-list">
+                        <img id="con-pic" src="./images/jane-m.jpg" alt="">
+                        <p id="pep-name">Jane M</p>
+                    </div>
+                    <div class="pep-list">
+                        <img id="con-pic" src="./images/phil-s.jpg" alt="">
+                        <p id="pep-name">Phil S</p>
+                    </div>
+                    <div class="pep-list">
+                        <img id="con-pic" src="./images/todd-s.jpg" alt="">
+                        <p id="pep-name">Todd S</p>
+                    </div>
+                <div class="more">
+                     <a href="">View More</a>
+                </div>
+                 </div>   
+                </div>
+            </div>
         </div>
 
     </div>
