--- a/03-week3/Button_clicker/index.html
+++ b/03-week3/Button_clicker/index.html
@@ -18,8 +18,8 @@
             <div class="def-box">
                 <div class="word-info">
                     <h2>ninja</h2>
-                    <p id="type"><em>noun</em></p>
-                    <p id="plural">Plural: <em>ninjas</em></p>
+                    <p class="type"><em>noun</em></p>
+                    <p class="plural">Plural: <em>ninjas</em></p>
                     <button onclick="likevote()">13 likes</button>
                 </div>
                 <div class="meaning">
@@ -29,8 +29,8 @@
             <div class="def-box">
                 <div class="word-info">
                     <h2>ninja</h2>
-                    <p id="type"><em>noun</em></p>
-                    <p id="plural">Plural: <em>ninjas</em></p>
+                    <p class="type"><em>noun</em></p>
+                    <p class="plural">Plural: <em>ninjas</em></p>
                     <button onclick="likevote()">37 likes</button>
                 </div>
                 <div class="meaning">
